--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,51 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+h1, h2, h3{
+  text-align: center;
+}
+
+.image-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  
+}
+
+img {
+  padding-bottom: 5vh;
+  max-width: 60vw;
+  max-height: 50vh;
+}
+
+.main-outer-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.score-outer-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.button-container {
+  align-self: center;
+  display:flex;
+  flex-direction: row;
+  justify-items: center;
+  margin-bottom: 20px;
+  max-width: 60vw;
+}
+
+.score-container {
+  display:flex;
+  width: 60vw;
+  justify-content: space-around;
+  margin-bottom: 20px;
+}
+
+
+
+
